fea: add Company
